attempt at logo fix for device (was too high), can’t check currently on devices just yet though

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -60,7 +60,8 @@ h1 .title {
 }
 
 .logo {
-  width: 70px;
+  width: 55px;
+  vertical-align: bottom !important;
 }
 
 .logo-title {
